update is virtually the same as to doing two updates in a row.

The Cache Daemon intercepts rrdtool update calls, assembling multiple
updates before writing them to the actual rrd file. When calling rrdtool
graph in such a setup, the command will tell the daemon to flush out all
pending updates for the rrd files, required to draw the graph.


RRD Dumping and Restoring (rrdtool dump/restore)
------------------------------------------------
by Tobi Oetiker

The output of rrdtool dump has been adjusted to be simpler to parse by
existing xml parsers.

The restore core has been completely re-written yet again and is now relying
on an incremental xml parser. This has the advantage that the memory
consumtion while restoring xml files is only slighly larger than the
resulting rrd file. Which is much less than the requirements of the 1.3.

RRD Graphing functions (rrdtool graph)
--------------------------------------
by Martin Sperl

* VDEF PERCENTNAN (a PRECENT that ignores NAN)

* CDEF PREDICT and PREDICTSIGMA functions for on-the-fly
  data prediction without the need to modify existing rrd files as it is
  required for HoltWinters.

* LibDBI integration provides a path to read data directly of a supported
  SQL database into rrdtool graph.

Miscellaneous Changes
---------------------

* graph legends can now be placed left, right or above the graph with the
  new --legend-direction and --legend-positon placement options. 
  by Melchior Rabe

* switched to using automake 1.11 which provides a 'silent' build process,
  causing errors and warnings to stand out much more than before.
  by Tobi Oetiker

* switched from intltoolize to autopoint for the i18n configuration.
  by Tobi Oetiker

* lua bindings for rrdtool
  by Fidelis Assis

* various improvements to rrd_open functions and mmap handling
  by Daniel Pocock

* allow the HW smoothing window size to be set to 0 with rrdtool tune
  by sylvain luiset

for more detail see the CHANGES file.